# aegis-unvault

./: Cargo.toml  README.md
.github/workflows/: manual-release.yml  release.yml  update-homebrew.yml
src/: decrypt.rs  io.rs  main.rs  models.rs  tui.rs
