
[package]
name = "aegis-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
aes-gcm = { version = "0.10", features = ["aes"] }
scrypt = "0.11"
ratatui = "0.26"
crossterm = "0.27"
hex = "0.4"
rpassword = "7.2"
rfd = "0.13"
arboard = "3.2"

